--- a/app/dashboard/Dashboard.module.scss
+++ b/app/dashboard/Dashboard.module.scss
@@ -1,7 +1,6 @@
 .container {
   width: 90%;
   height: 100vh;
-
   padding: 20px;
   .components{
     margin-top: 2rem;
@@ -9,6 +8,24 @@
     flex-direction: column;
     align-items: center;
     gap: 2rem;
+  }
+  .profile{
+    display: none;
+    margin-top: 20px;
+    
+    @media (max-width: 1080px) {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+    img{
+      border-radius: 50%;
+      
+    }
+    gap: 10px;
+    h1{
+      color: #fff;
+    }
   }
   h1 {
     font-size: 2rem;
