--- a/app/dashboard/Dashboard.module.scss
+++ b/app/dashboard/Dashboard.module.scss
@@ -1,7 +1,12 @@
 .container {
+  position: relative;
   width: 90%;
-  height: 100vh;
+  min-height: 100vh;
   padding: 20px;
+  @media (max-width: 1080px) {
+    min-height: 145vh;
+    
+  }
   .components{
     margin-top: 2rem;
     display: flex;
@@ -35,5 +40,27 @@
     display: flex;
     gap: 20px;
     flex-wrap: wrap;
+  }
+  .footer{
+    display: none;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    height: 60px;
+    width: 100%;
+    background: #182237;
+    @media (max-width: 1080px) {
+    display: flex;
+    
+  }
+    .link{
+      text-decoration: none;
+      padding:15px 30px ;
+      background: rgb(94, 235, 94);
+      color: #fff;
+    }
   }
 }
