--- a/app/components/ui/searchbar/Searchbar.module.scss
+++ b/app/components/ui/searchbar/Searchbar.module.scss
@@ -5,6 +5,9 @@
     align-items: center;
     margin: 0 auto;
     border-radius: 8px;
+    @media (max-width: 500px) {
+        flex-direction: column;
+  }
     h2{
         color: gray;
         margin-left: 5px;
