--- a/app/components/ui/chart/Charts.module.scss
+++ b/app/components/ui/chart/Charts.module.scss
@@ -6,7 +6,8 @@
     width: 50rem;
     margin: 0 auto;
     @media (max-width: 1080px) {
-    width: 100%;
+    width: 90%;
+    height: 20rem;
   }
     h2{
         color: gray;
